# kitor

./: CMakeLists.txt  README.md
src/: code_point.cpp  code_point.h  gap_buffer.cpp  gap_buffer.h  input.cpp  kitor.cpp  kitor.h  main.cpp  raw_mode.cpp  raw_mode.h  terminal.cpp  terminal.h  utf8_reader.cpp  utf8_reader.h
src/terminal/: gap_buffer.cpp  gap_buffer.h  terminal.cpp  terminal.h
src/utf8/: code_point.cpp  code_point.h  utf8_reader.cpp  utf8_reader.h
test/: code_point_test.cpp  gap_buffer_test.cpp  kitor_test.cpp  utf8_reader_test.cpp
